# todoMap

./: .gitignore  README.md  SMOKE-TESTED.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-07-01-todoMap-implementation.md
docs/superpowers/specs/: 2026-07-01-todoMap-design.md
src/: App.tsx  api.ts  main.tsx  previewData.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: comments.rs  export.rs  ipc.rs  me.rs  mod.rs  people.rs  projects.rs  todos.rs
src-tauri/tests/: export.rs  me.rs  people.rs  projects.rs
src/components/: EditPersonDialog.tsx  EmptyState.tsx  GraphView.tsx  NewPersonDialog.tsx  OnboardingDialog.tsx  ProjectDialog.tsx  Sidebar.tsx  TodoDialog.tsx
src/graph/: edges.test.ts  edges.ts  layout.test.ts  layout.ts
