[package]
name = "todomap"
version = "0.1.0"
edition = "2021"

[lib]
name = "todomap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
time = "=0.3.35"

[dev-dependencies]
tempfile = "3"